# navani

./: .gitignore  Pipfile  Simple example jupyter.ipynb  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
navani/: echem.py
tests/: test_echem.py
